# DPA_Exercises

./: .gitignore  README.md
.cache/clangd/index/: task01.c.2BE4CBB15C2DAE89.idx  task02.c.061F99171D09C3FF.idx
dpa1/: README.md  documentation.md
dpa1/dpa1/mpi/: main.c
dpa1/dpa1/serialized/: main.c
dpa1/mpi/: main.c
dpa1/openmp/: README.md  main.c
dpa2/deprecated/bcast/: CMakeLists.txt  main.c
dpa2/deprecated/bcast/.cache/clangd/index/: main.c.8FC3DF642681B448.idx
dpa2/deprecated/binomial_bcast/: CMakeLists.txt  main.c
dpa2/deprecated/binomial_bcast/.cache/clangd/index/: main.c.9554EEE0C2371652.idx
dpa2/marie/: CMakeLists.txt  docs.md  prog  task01.c  task02.c
dpa2/marie/.cache/clangd/index/: task03.c.6C365B5FB493CE22.idx
dpa3/marie/: CMakeLists.txt  task01.c  task01_02_04_docs.md  task02.c  task03.md  task04.md
dpa3/submission_version/: task01.c
dpa3/teng/: CMakeLists.txt  logs.txt  p1.c
dpa4/combined/: README.md  p1.c  p2.c
dpa4/marie/: task03.c
dpa4/teng/.cache/clangd/index/: dpa4-nr2.c.AACB1C7856F427CD.idx  main.c.D8DEDE862BC7B4A1.idx  mmio.c.BA3873B690573CBF.idx  mmio.h.8B700D5F45157744.idx
dpa4/teng/exercise2/: CMakeLists.txt  CMakePresets.json  main.c
dpa5/marie/: task01.c  task04.md
dpa5/teng/: CMakeLists.txt  task02.c
dpa6/: p1.c
dpa6/combined/: CMakeLists.txt  task02.c
dpa6/marie/: task02.c
dpa6/teng/: p1.c  task1.md
dpa6/teng/.cache/clangd/index/: p1.c.4450605DC2BBC2CC.idx
